--- a/dashboard.css
+++ b/dashboard.css
@@ -110,14 +110,23 @@ main {
   display: block;
 }
 
+.section {
+  max-width: 600px;
+  height: 320px;
+  margin: 0 auto 30px;
+  position: relative;
+}
+
 canvas {
   background: #0a75d1;
   border-radius: 12px;
-  padding: 10px;
-  max-width: 100%;
-  height: 320px;
+  width: 100%;
+  height: 100%;
   box-shadow: 0 4px 12px rgb(10 117 209 / 0.3);
+  display: block;
+  transition: all 0.3s ease;
 }
+
 
 #casosContainer, #vacinasContainer, #hospitaisContainer {
   color: #0a75d1;
